# endlesstrails

./: .gitignore  .ignore  Cargo.toml  README.md  example.saras.toml  get_manage_scripts.sh  index.html  pyproject.toml  tmuxp-session.yaml
back/: Cargo.toml
back/src/: admin.rs  conf.rs  lib.rs  main.rs  urls.rs
back/src/admin/: api.rs
db/: example.updb_conf.py  migrations.sql
db/schema/: schema.sql  sessions.sql  users.sql
front/js/core/: login-form.js
front/style/core/: core.css  fonts.css  home.css
front/templates/core/: home.html  index.html  login-form.html
manage/: app-srv.sh  build.sh  bundle_css.sh  bundle_css_conf.py  bundle_js.py  bundle_js.sh  conf_bundle_js.py  css_bundler_conf.py  deploy.sh  minify.sh  run.sh  sync_deps.sh  watcher.sh  ws_watcher_conf.py
src/: main.rs
static/img/: bg.1000x1200.avif  bg.1000x1200.jxl  bg.1280x.avif  bg.1280x.jxl  bg.avif  bg.jxl
