[project]
name = "endlesstrails"
version = "0.1.0"
description = "Virtual env for endlesstrails project."
authors = [
    {name = "Sergei Minaev", email = "i@zenux.ru"},
]
dependencies = [
    "updb @ git+https://github.com/SergeiMinaev/updb",
    "ws-watcher @ git+https://github.com/SergeiMinaev/ws_watcher",
    "css-bundler @ git+https://github.com/SergeiMinaev/css-bundler",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "Private"}

[tool.pdm]
distribution = false
